--- a/questionnaire.html
+++ b/questionnaire.html
@@ -44,16 +44,16 @@
         <div class="title">3.在以下领域中，哪些是您接下来的6个月中最需要改善的？（可多选）</div>
         <div>
             <div style="display: block"><input class="check" type="checkbox" value=""
-                                               style="display: inline-block ;width: 20px;height: 20px"/><span>服务虚拟化管理</span>
+                                               style="display: inline-block ;width: 20px;height: 20px"/><span class="ttt">服务虚拟化管理</span>
             </div>
             <div style="display: block"><input class="check" type="checkbox" value=""
-                                               style="display: inline-block ;width: 20px;height: 20px"/><span>API安全管理</span>
+                                               style="display: inline-block ;width: 20px;height: 20px"/><span class="ttt">API安全管理</span>
             </div>
             <div style="display: block"><input class="check" type="checkbox" value=""
-                                               style="display: inline-block ;width: 20px;height: 20px"/><span>应用性能管理</span>
+                                               style="display: inline-block ;width: 20px;height: 20px"/><span class="ttt">应用性能管理</span>
             </div>
             <div style="display: block"><input class="check" type="checkbox" value=""
-                                               style="display: inline-block ;width: 20px;height: 20px"/><span>其他</span>
+                                               style="display: inline-block ;width: 20px;height: 20px"/><span class="ttt">其他</span>
             </div>
         </div>
         <div class="title">4.这个项目是否已经获得预算支持？</div>
