--- a/questionnaire.html
+++ b/questionnaire.html
@@ -13,7 +13,7 @@
 <body>
 <div class='container'>
     <div class='title'>
-        <img src='image/Logo@2x.png' alt='logo' width='240' height=68>
+        <img src='image/wenjuandiaocha@2x.png' alt='logo' width='100%' height=130>
     </div>
     <form method='post' onsubmit="return false" id='reg_form' name='reg_form'>
         <input type='text' name='name' placeholder="姓名">
@@ -26,10 +26,10 @@
             <button><span></span><span class='caret'></span></button>
             <input type='text' name='one'>
             <ul class='form-select select_type select_company_type'>
-                <li value="A">数十人</li>
-                <li value="B">数百人</li>
-                <li value="C">数千人</li>
-                <li value="D">外包</li>
+                <li value="A">A.数十人</li>
+                <li value="B">B.数百人</li>
+                <li value="C">C.数千人</li>
+                <li value="D">D.外包</li>
             </ul>
         </div>
         <div class="title">2.在过去6个月中，贵公司是否发生过应用系统宕机或者性能太慢而接到大量用户投诉？</div>
@@ -37,8 +37,8 @@
             <button><span></span><span class='caret'></span></button>
             <input type='text' name='two'>
             <ul class='form-select select_type select_company_type'>
-                <li value="A">有</li>
-                <li value="B">没有</li>
+                <li value="A">A.有</li>
+                <li value="B">B.没有</li>
             </ul>
         </div>
         <div class="title">3.在以下领域中，哪些是您接下来的6个月中最需要改善的？（可多选）</div>
