--- a/questionnaire.html
+++ b/questionnaire.html
@@ -209,15 +209,16 @@
                     }
                 })
             } else {
-                if (check1 == true) {
-                    $('.err_msg').html('*' + check2);
-                } else {
-                    $('.err_msg').html('*' + check1);
-                }
+//                if (check1 == true) {
+//                    $('.err_msg').html('*' + check2);
+//                } else {
+//                    $('.err_msg').html('*' + check1);
+//                }
+                alert("请输入完整信息！")
             }
         } else {
             alert("请输入完整信息！")
-            $('.err_msg').html('请填写完整信息！');
+//            $('.err_msg').html('请填写完整信息！');
         }
     })
 
