--- a/questionnaire.html
+++ b/questionnaire.html
@@ -16,7 +16,7 @@
         <img src='image/wenjuandiaocha@2x.png' alt='logo' width='100%' height=180>
     </div>
     <form method='post' onsubmit="return false" id='reg_form' name='reg_form'>
-        <input type='text' name='name' placeholder="姓名">
+        <span>姓名:</span><input type='text' name='name' placeholder="姓名">
         <input type='text' name='site' placeholder="职位">
         <input type='email' name='email' placeholder="邮箱">
         <input type='text' name='company' placeholder="公司">
