--- a/questionnaire.html
+++ b/questionnaire.html
@@ -16,11 +16,11 @@
         <img src='image/wenjuandiaocha@2x.png' alt='logo' width='100%' height=180>
     </div>
     <form method='post' onsubmit="return false" id='reg_form' name='reg_form'>
-        <span>姓名:</span><input type='text' name='name' placeholder="姓名">
-        <input type='text' name='site' placeholder="职位">
-        <input type='email' name='email' placeholder="邮箱">
-        <input type='text' name='company' placeholder="公司">
-        <input type='text' name='phone' placeholder="电话">
+        <input id="in1" type='text' name='name' placeholder="姓名">
+        <input id="in2" type='text' name='company' placeholder="公司">
+        <input id="in3" type='text' name='site' placeholder="职位">
+        <input id="in4" type='text' name='phone' placeholder="电话">
+        <input id="in5" type='email' name='email' placeholder="邮箱">
         <div class="title">1.贵企业现在有多少开发人员？</div>
         <div class='dropdown'>
             <button><span></span><span class='caret'></span></button>
