--- a/questionnaire.html
+++ b/questionnaire.html
@@ -12,8 +12,9 @@
     <head>
 <body>
 <div class='container'>
-    <div class='title'>
+    <p class='title'width='100%' height=180>
         <img src='image/wenjuandiaocha@2x.png' alt='logo' width='100%' height=180>
+        <p align="center">CA Technologies有奖调查问卷</p>
     </div>
     <form method='post' onsubmit="return false" id='reg_form' name='reg_form'>
         <input id="in1" type='text' name='name' placeholder="姓名">
