--- a/questionnaire.html
+++ b/questionnaire.html
@@ -12,7 +12,7 @@
     <head>
 <body>
 <div class='container'>
-    <p class='title'width='100%' height=180>
+    <p class='title'width='100%' height=180px>
         <img src='image/wenjuandiaocha@2x.png' alt='logo' width='100%' height=180>
         <p align="center">CA Technologies有奖调查问卷</p>
     </div>
