--- a/questionnaire.html
+++ b/questionnaire.html
@@ -17,11 +17,11 @@
     <p align="center" style="position: relative;top: -125px;font-size: 30px;">CA Technologies有奖调查问卷</p>
 </div>
 <form method='post' onsubmit="return false" id='reg_form' name='reg_form'>
-    <input id="in1" type='text' name='name' placeholder="姓名">
-    <input id="in2" type='text' name='company' placeholder="公司">
-    <input id="in3" type='text' name='site' placeholder="职位">
-    <input id="in4" type='text' name='phone' placeholder="电话">
-    <input id="in5" type='email' name='email' placeholder="邮箱">
+    <div class="user-info"><label>姓名</label><input id="in1" type='text' name='name'></div>
+    <div class="user-info"><label>公司</label><input id="in2" type='text' name='company'></div>
+    <div class="user-info"><label>职位</label><input id="in3" type='text' name='site'></div>
+    <div class="user-info"><label>电话</label><input id="in4" type='text' name='phone'></div>
+    <div class="user-info"><label>邮箱</label><input id="in5" type='email' name='email'></div>
     <div class="title">1.贵企业现在有多少开发人员？</div>
     <div class='dropdown'>
         <button><span></span><span class='caret'></span></button>
