--- a/questionnaire.html
+++ b/questionnaire.html
@@ -18,10 +18,13 @@
 </div>
 <form method='post' onsubmit="return false" id='reg_form' name='reg_form'>
     <div class="user-info"><label style="display: inline-block">姓名</label><input id="in1" type='text' name='name'></div>
-    <div class="user-info"><label style="display: inline-block">公司</label><input id="in2" type='text' name='company'></div>
+    <div class="user-info"><label style="display: inline-block">公司</label><input id="in2" type='text' name='company'>
+    </div>
     <div class="user-info"><label style="display: inline-block">职位</label><input id="in3" type='text' name='site'></div>
-    <div class="user-info"><label style="display: inline-block">电话</label><input id="in4" type='text' name='phone'></div>
-    <div class="user-info"><label style="display: inline-block">邮箱</label><input id="in5" type='email' name='email'></div>
+    <div class="user-info"><label style="display: inline-block">电话</label><input id="in4" type='text' name='phone'>
+    </div>
+    <div class="user-info"><label style="display: inline-block">邮箱</label><input id="in5" type='email' name='email'>
+    </div>
     <div class="title">1.贵企业现在有多少开发人员？</div>
     <div class='dropdown'>
         <button><span></span><span class='caret'></span></button>
@@ -71,6 +74,7 @@
         <div style="display: block"><input id="y7" class="check" type="checkbox" value=""
                                            style="display: inline-block ;width: 20px;height: 20px"/><span
                 class="ttt">其他</span>
+            <input type="text">
         </div>
     </div>
     <div class="title">4.这个项目是否已经获得预算支持？</div>
