--- a/download_sustained.html
+++ b/download_sustained.html
@@ -34,7 +34,7 @@
 			<div class='download_list'>
 				<span class='title_list'>电子书</span>
 				<div class='content_list_3'>
-					<span class='content_words'>开发和测试限制会阻碍数字化变革的步伐吗_update</span>
+					<span class='content_words'>开发和测试限制会阻碍数字化变革的步伐吗</span>
 				</div>
 				<a href='pdf/持续交付/电子书：开发和测试限制会阻碍数字化变革的步伐吗_update.pdf'>
 					<span class='download_link'>点此查看</span>
