--- a/questionnaire.html
+++ b/questionnaire.html
@@ -88,7 +88,7 @@
         </ul>
     </div>
     <div class="title">5.您目前正在着眼解决什么具体的IT问题？</div>
-    <input type="text" id="five">
+    <input type="text" id="five" style="width: 250px">
     <div class="title">6.我们可以通过何种方式帮您解决这些问题？</div>
     <div class='dropdown'>
         <button><span></span><span class='caret'></span></button>
