--- a/questionnaire.html
+++ b/questionnaire.html
@@ -18,7 +18,8 @@
 </div>
 <form method='post' onsubmit="return false" id='reg_form' name='reg_form'>
     <div class="user-info"><label style="display: inline-block">姓名</label><input id="in1" type='text' name='name'></div>
-    <div class="user-info"><label style="display: inline-block">公司</label><input id="in2" type='text' name='company'>
+    <div class="user-info"><label style="display: inline-block">公司</label>
+        <input id="in2" type='text' name='company' style="width: 200px;margin-left: 20px">
     </div>
     <div class="user-info"><label style="display: inline-block">职位</label><input id="in3" type='text' name='site'></div>
     <div class="user-info"><label style="display: inline-block">电话</label><input id="in4" type='text' name='phone'>
