--- a/questionnaire.html
+++ b/questionnaire.html
@@ -17,7 +17,9 @@
     <p align="center" style="position: relative;top: -125px;font-size: 30px;">CA Technologies有奖调查问卷</p>
 </div>
 <form method='post' onsubmit="return false" id='reg_form' name='reg_form'>
-    <div class="user-info"><label style="display: inline-block">姓名</label><input id="in1" type='text' name='name'></div>
+    <div class="user-info"><label style="display: inline-block">姓名</label><input id="in1" type='text' name='name'
+                                                                                 style="width: 168px;margin-left: 20px;">
+    </div>
     <div class="user-info"><label style="display: inline-block">公司</label>
         <input id="in2" type='text' name='company' style="width: 168px;margin-left: 20px;">
     </div>
