--- a/questionnaire.html
+++ b/questionnaire.html
@@ -17,19 +17,19 @@
     <p align="center" style="position: relative;top: -125px;font-size: 30px;">CA Technologies有奖调查问卷</p>
 </div>
 <form method='post' onsubmit="return false" id='reg_form' name='reg_form'>
-    <div class="user-info"><label style="display: inline-block">姓名</label><input id="in1" type='text' name='name'
+    <div class="user-info" style="width: 290px"><label style="display: inline-block">姓名</label><input id="in1" type='text' name='name'
                                                                                  style="width: 168px;margin-left: 20px;">
     </div>
-    <div class="user-info"><label style="display: inline-block">公司</label>
+    <div class="user-info" style="width: 290px"><label style="display: inline-block">公司</label>
         <input id="in2" type='text' name='company' style="width: 168px;margin-left: 20px;">
     </div>
-    <div class="user-info"><label style="display: inline-block">职位</label><input id="in3" type='text' name='site'
+    <div class="user-info" style="width: 290px"><label style="display: inline-block">职位</label><input id="in3" type='text' name='site'
                                                                                  style="width: 168px;margin-left: 20px;">
     </div>
-    <div class="user-info"><label style="display: inline-block">电话</label><input id="in4" type='text' name='phone'
+    <div class="user-info" style="width: 290px"><label style="display: inline-block">电话</label><input id="in4" type='text' name='phone'
                                                                                  style="width: 168px;margin-left: 20px;">
     </div>
-    <div class="user-info"><label style="display: inline-block">邮箱</label><input id="in5" type='email' name='email'
+    <div class="user-info" style="width: 290px"><label style="display: inline-block">邮箱</label><input id="in5" type='email' name='email'
                                                                                  style="width: 168px;margin-left: 20px;">
     </div>
     <div class="title">1.贵企业现在有多少开发人员？</div>
