--- a/download_UIM.html
+++ b/download_UIM.html
@@ -14,12 +14,12 @@
 		<div id='download_container'>
 			<span class='download_title'>统一基础架构管理</span>
 			<div class='download_list'>
-				<span class='title_list'>成功案例</span>
+				<span class='title_list'>产品简介</span>
 				<div class='content_list_1'>
-					<span class='content_words'>digitalglobe</span>
+					<span class='content_words'>CA统一基础架构管理</span>
 				</div>
-				<a href='pdf/UIM/成功案例：digitalglobe.pdf'>
-					<span class='download_link'>点此查看</span>
+				<a href='pdf/UIM/产品简介：CA统一基础架构管理.pdf'>
+					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
 				</a>
 			</div>
 			<div class='download_list'>
@@ -28,16 +28,25 @@
 					<span class='content_words'>确保IT服务可用性的同时提高基础架构和维护的敏捷性</span>
 				</div>
 				<a href='pdf/UIM/解决方案介绍.pdf'>
-					<span class='download_link'>点此查看</span>
+					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
 				</a>
 			</div>
 			<div class='download_list'>
-				<span class='title_list'>原因</span>
+				<span class='title_list'>白皮书</span>
 				<div class='content_list_3'>
 					<span class='content_words'>选择CA统一架构监控的25大原因</span>
 				</div>
 				<a href='pdf/UIM/选择CA统一架构.pdf'>
-					<span class='download_link'>点此查看</span>
+					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
+				</a>
+			</div>
+			<div class='download_list'>
+				<span class='title_list'>成功案例</span>
+				<div class='content_list_1'>
+					<span class='content_words'>digitalglobe</span>
+				</div>
+				<a href='pdf/UIM/成功案例：digitalglobe.pdf'>
+					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
 				</a>
 			</div>
 		</div>
