--- a/download_sustained.html
+++ b/download_sustained.html
@@ -8,65 +8,69 @@
 		<meta name="format-detection" content="telephone=no">
 		<link href="phone_index.css" rel="stylesheet"> 
 		<script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
-		<title>持续交付</title>
+		<title>应用持续交付</title>
 	<head>
 	<body>
 		<div id='download_container'>
-			<span class='download_title'>持续交付</span>
+			<span class='download_title'>应用持续交付</span>
+			<div class='download_list'>
+				<span class='title_list'>产品简介</span>
+				<div class='content_list_1'>
+					<span class='content_words'>发布自动化</span>
+				</div>
+				<a href='pdf/应用持续交付/产品简介：发布自动化.pdf'>
+					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
+				</a>
+			</div>
+			<div class='download_list'>
+				<span class='title_list'>产品简介</span>
+				<div class='content_list_2'>
+					<span class='content_words'>服务虚拟化</span>
+				</div>
+				<a href='pdf/应用持续交付/产品简介：服务虚拟化.pdf'>
+					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
+				</a>
+			</div>
+			<div class='download_list'>
+				<span class='title_list'>解决方案简介</span>
+				<div class='content_list_3'>
+					<span class='content_words'>跨越开发运维的鸿沟</span>
+				</div>
+				<a href='pdf/应用持续交付/解决方案简介：跨越开发运维的鸿沟.pdf'>
+					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
+				</a>
+			</div>
 			<div class='download_list'>
 				<span class='title_list'>白皮书</span>
 				<div class='content_list_1'>
-					<span class='content_words'>借助服务虚拟化消除软件开发和测试的限制</span>
+					<span class='content_words'>应用发布进程自动化</span>
 				</div>
-				<a href='pdf/持续交付/白皮书：借助服务虚拟化消除软件开发和测试的限制.pdf'>
-					<span class='download_link'>点此查看</span>
+				<a href='pdf/应用持续交付/白皮书：应用发布进程自动化.pdf'>
+					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
 				</a>
 			</div>
 			<div class='download_list'>
 				<span class='title_list'>白皮书</span>
 				<div class='content_list_2'>
-					<span class='content_words'>应用发布进程自动化</span>
+					<span class='content_words'>借助服务虚拟化消除软件开发和测试的限制</span>
 				</div>
-				<a href='pdf/持续交付/白皮书：应用发布进程自动化.pdf'>
-					<span class='download_link'>点此查看</span>
+				<a href='pdf/应用持续交付/白皮书：借助服务虚拟化消除软件开发和测试的限制.pdf'>
+					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
 				</a>
 			</div>
+			
 			<div class='download_list'>
 				<span class='title_list'>电子书</span>
 				<div class='content_list_3'>
 					<span class='content_words'>开发和测试限制会阻碍数字化变革的步伐吗</span>
 				</div>
-				<a href='pdf/持续交付/电子书：开发和测试限制会阻碍数字化变革的步伐吗_update.pdf'>
-					<span class='download_link'>点此查看</span>
+				<a href='pdf/应用持续交付/电子书：开发和测试限制会阻碍数字化变革的步伐吗_update.pdf'>
+					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
 				</a>
 			</div>
-			<div class='download_list'>
-				<span class='title_list'>解决方案</span>
-				<div class='content_list_1'>
-					<span class='content_words'>跨越开发运维的鸿沟</span>
-				</div>
-				<a href='pdf/持续交付/解决方案：跨越开发运维的鸿沟.pdf'>
-					<span class='download_link'>点此查看</span>
-				</a>
-			</div>
-			<div class='download_list'>
-				<span class='title_list'>解决方案简介</span>
-				<div class='content_list_2'>
-					<span class='content_words'>应用发布进程自动化</span>
-				</div>
-				<a href='pdf/持续交付/解决方案简介：发布自动化.pdf'>
-					<span class='download_link'>点此查看</span>
-				</a>
-			</div>
-			<div class='download_list'>
-				<span class='title_list'>解决方案简介</span>
-				<div class='content_list_3'>
-					<span class='content_words'>开发和测试限制会阻碍数字变革的步伐吗？</span>
-				</div>
-				<a href='pdf/持续交付/解决方案简介：服务虚拟化.pdf'>
-					<span class='download_link'>点此查看</span>
-				</a>
-			</div>
+			
+			
+			
 		</div>
 	</body>
 </html>
