--- a/phone_weixin.html
+++ b/phone_weixin.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset='utf-8'>
-		<meta name="viewport" content="width=750,inital-scale=1.0,maximum-scale=2.0,user-scalable=no;">
+		<meta name="viewport" content="width=750,user-scalable=no;">
 		<link href="phone_index.css" rel="stylesheet"> 
 		<script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
 		<title>官方微信</title>
