--- a/questionnaire.html
+++ b/questionnaire.html
@@ -17,28 +17,20 @@
     <p align="center" style="position: relative;top: -125px;font-size: 30px;">CA Technologies有奖调查问卷</p>
 </div>
 <form method='post' onsubmit="return false" id='reg_form' name='reg_form'>
-    <div class="user-info" style="width: 290px"><label style="display: inline-block">姓名</label><input id="in1"
-                                                                                                      type='text'
-                                                                                                      name='name'
-                                                                                                      style="width: 208px;margin-left: 20px;background-color: #164460">
+    <div class="user-info" style="width: 290px"><label style="display: inline-block">姓名</label><input id="in1" type='text' name='name'
+                                                                                 style="width: 208px;margin-left: 20px;">
     </div>
     <div class="user-info" style="width: 290px"><label style="display: inline-block">公司</label>
-        <input id="in2" type='text' name='company' style="width: 208px;margin-left: 20px;background-color: #164460">
+        <input id="in2" type='text' name='company' style="width: 208px;margin-left: 20px;">
     </div>
-    <div class="user-info" style="width: 290px"><label style="display: inline-block">职位</label><input id="in3"
-                                                                                                      type='text'
-                                                                                                      name='site'
-                                                                                                      style="width: 208px;margin-left: 20px;background-color: #164460"">
+    <div class="user-info" style="width: 290px"><label style="display: inline-block">职位</label><input id="in3" type='text' name='site'
+                                                                                 style="width: 208px;margin-left: 20px;">
     </div>
-    <div class="user-info" style="width: 290px"><label style="display: inline-block">电话</label><input id="in4"
-                                                                                                      type='text'
-                                                                                                      name='phone'
-                                                                                                      style="width: 208px;margin-left: 25px;background-color: #164460"">
+    <div class="user-info" style="width: 290px"><label style="display: inline-block">电话</label><input id="in4" type='text' name='phone'
+                                                                                 style="width: 208px;margin-left: 25px;">
     </div>
-    <div class="user-info" style="width: 290px"><label style="display: inline-block">邮箱</label><input id="in5"
-                                                                                                      type='email'
-                                                                                                      name='email'
-                                                                                                      style="width: 208px;margin-left: 20px;background-color: #164460"">
+    <div class="user-info" style="width: 290px"><label style="display: inline-block">邮箱</label><input id="in5" type='email' name='email'
+                                                                                 style="width: 208px;margin-left: 20px;">
     </div>
     <div class="title">1.贵企业现在有多少开发人员？</div>
     <div class='dropdown'>
