--- a/phone_weixin.html
+++ b/phone_weixin.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name="viewport" content="width=750,user-scalable=no;">
-	
+		<link href="phone_index.css" rel="stylesheet"> 
+		<script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
 		<title>官方微信</title>
 	<head>
 	<body>
@@ -17,14 +18,13 @@
 					<span class='weixin_word'>激烈的竞争中获取优势。</span>
 				</div>
 			</div>
-			<div class='weixin_code_body'>
-				<div class='pic_container'>
+			
+				
 					<img src='image/weixin_code.png' class='weixin_code'>
-				</div>
 				<span class='weixin_code_tip'>
 					长按二维码，关注CA微信公众号，获取更多资讯。
 				</span>
-			</div>
+			
 		</div>
 	</body>
 </html>
