--- a/phone_weixin.html
+++ b/phone_weixin.html
@@ -19,8 +19,9 @@
 				</div>
 			</div>
 			
-				
-				<img src='image/weixin_code.png' class='weixin_code'>
+				<div class='pic_container'>
+					<img src='image/weixin_code.png' class='weixin_code'>
+				</div>
 				<span class='weixin_code_tip'>
 					长按二维码，关注CA微信公众号，获取更多资讯。
 				</span>
