--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
 			<div class='phone_body'>
 				<a href='phone_download.html'>
 					<div class='body_list'>
-						<div class='list_name'>资料下载</div>
+						<div class='list_name'><!-- 资料下载 --></div>
 						<span class='listname'>产品资料下载</span><img src='image/phone_index/play.png' class='listimg'>
 					</div>
 				</a>
 				<a href='questionnaire.html'>
 					<div class='body_list'>
-						<div class='list_name'>问卷调查</div>
+						<div class='list_name'><!-- 问卷调查 --></div>
 						<span class='listname'>在线问卷调查</span><img src='image/phone_index/play.png' class='listimg'>
 					</div>
 				</a>
 				<a href='phone_weixin.html'>
 					<div class='body_list'>
-						<div class='list_name'>官方微信</div>
+						<div class='list_name'><!-- 官方微信 --></div>
 						<span class='listname'>CA官方微信</span><img src='image/phone_index/play.png' class='listimg'>
 					</div>
 				</a>
 				<a href='http://www.ca.com.cn/'>
 					<div class='body_list'>
-						<div class='list_name'>官方网站</div>
+						<div class='list_name'><!-- 官方网站 --></div>
 						<span class='listname'>CA官方网站</span><img src='image/phone_index/play.png' class='listimg'>
 					</div>
 				</a>
