--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				</a>
 			</div>
 			<div class='phone_bottom'>
-				Copyright@2015CA.保留所有权利
+				Copyright©2015CA.保留所有权利
 			</div>
 		</div>
 	</body>
