--- a/phone_weixin.html
+++ b/phone_weixin.html
@@ -18,14 +18,13 @@
 					<span class='weixin_word'>激烈的竞争中获取优势。</span>
 				</div>
 			</div>
-			<!-- <div class='weixin_code_body'>
-				<div class='pic_container'> -->
+
+					<div class='blank'></div>
 					<img src='image/weixin_code.png' class='weixin_code'>
-				<!-- </div> -->
 				<span class='weixin_code_tip'>
 					长按二维码，关注CA微信公众号，获取更多资讯。
 				</span>
-			<!-- </div> -->
+
 		</div>
 	</body>
 </html>
