--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<div class='banner_bottom'>
 						<img src='image/phone_index/logo.png' class='banner_pic'>
 						<span class='banner_bottom_tip'>Business</span>
-						<span class='banner_bottom_tip'>rewritten by software.</span>
-						<span class='special_tip'>TM</span>
+						<span class='banner_bottom_tip'>rewritten by software.<sup class='special_tip'>TM</sup></span>
+						
 					</div>
 				</div>
 			</div>
