--- a/download_API.html
+++ b/download_API.html
@@ -16,7 +16,7 @@
 			<div class='download_list'>
 				<span class='title_list'>产品简介</span>
 				<div class='content_list_1'>
-					<span class='content_words'>CA API管理</span>
+					<span class='content_words'><span class='font_style'>CA API</span>管理</span>
 				</div>
 				<a href='pdf/API管理/产品简介：CA API管理.pdf'>
 					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
@@ -25,7 +25,7 @@
 			<div class='download_list'>
 				<span class='title_list'>方案全览</span>
 				<div class='content_list_2'>
-					<span class='content_words'>CA API管理</span>
+					<span class='content_words'><span class='font_style'>CA API管理</span></span>
 				</div>
 				<a href='pdf/API管理/方案全览：CA API管理.pdf'>
 					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
@@ -34,7 +34,7 @@
 			<div class='download_list'>
 				<span class='title_list'>电子书</span>
 				<div class='content_list_3'>
-					<span class='content_words'>API战略和架构</span>
+					<span class='content_words'><span class='font_style'>API</span>战略和架构</span>
 				</div>
 				<a href='pdf/API管理/电子书：API战略和架构.pdf'>
 					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
@@ -43,7 +43,7 @@
 			<div class='download_list'>
 				<span class='title_list'>电子书</span>
 				<div class='content_list_1'>
-					<span class='content_words'>API管理手册</span>
+					<span class='content_words'><span class='font_style'>API</span>管理手册</span>
 				</div>
 				<a href='pdf/API管理/电子书：API管理手册.pdf'>
 					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
@@ -52,7 +52,7 @@
 			<div class='download_list'>
 				<span class='title_list'>电子书</span>
 				<div class='content_list_2'>
-					<span class='content_words'>面向企业的完整API战略模型</span>
+					<span class='content_words'>面向企业的完整<span class='font_style'>API</span>战略模型</span>
 				</div>
 				<a href='pdf/API管理/电子书：面向企业的完整API战略模型.pdf'>
 					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
@@ -71,7 +71,7 @@
 			<div class='download_list'>
 				<span class='title_list'>IT行业成功案例</span>
 				<div class='content_list_1'>
-					<span class='content_words'>Icemobile</span>
+					<span class='content_words'><span class='font_style'>Icemobile</span></span>
 				</div>
 				<a href='pdf/API管理/IT成功案例：Icemobile.pdf'>
 					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
@@ -80,7 +80,7 @@
 			<div class='download_list'>
 				<span class='title_list'>医疗成功案例</span>
 				<div class='content_list_2'>
-					<span class='content_words'>Amerigroup</span>
+					<span class='content_words'><span class='font_style'>Amerigroup</span>/span>
 				</div>
 				<a href='pdf/API管理/医疗成功案例：Amerigroup.pdf'>
 					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
