--- a/download_UIM.html
+++ b/download_UIM.html
@@ -16,7 +16,7 @@
 			<div class='download_list'>
 				<span class='title_list'>产品简介</span>
 				<div class='content_list_1'>
-					<span class='content_words'>CA统一基础架构管理</span>
+					<span class='content_words'><span class='font_style'>CA</span>统一基础架构管理</span>
 				</div>
 				<a href='pdf/UIM/产品简介：CA统一基础架构管理.pdf'>
 					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
@@ -34,7 +34,7 @@
 			<div class='download_list'>
 				<span class='title_list'>白皮书</span>
 				<div class='content_list_3'>
-					<span class='content_words'>选择CA统一架构监控的25大原因</span>
+					<span class='content_words'>选择<span class='font_style'>CA</span>统一架构监控的25大原因</span>
 				</div>
 				<a href='pdf/UIM/选择CA统一架构.pdf'>
 					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
@@ -43,7 +43,7 @@
 			<div class='download_list'>
 				<span class='title_list'>成功案例</span>
 				<div class='content_list_1'>
-					<span class='content_words'>digitalglobe</span>
+					<span class='content_words'><span class='font_style'>digitalglobe</span></span>
 				</div>
 				<a href='pdf/UIM/成功案例：digitalglobe.pdf'>
 					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
