--- a/download_API.html
+++ b/download_API.html
@@ -80,7 +80,7 @@
 			<div class='download_list'>
 				<span class='title_list'>医疗成功案例</span>
 				<div class='content_list_2'>
-					<span class='content_words'><span class='font_style'>Amerigroup</span>/span>
+					<span class='content_words'><span class='font_style'>Amerigroup</span></span>
 				</div>
 				<a href='pdf/API管理/医疗成功案例：Amerigroup.pdf'>
 					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
