--- a/download_UIM.html
+++ b/download_UIM.html
@@ -25,7 +25,7 @@
 			<div class='download_list'>
 				<span class='title_list'>解决方案介绍</span>
 				<div class='content_list_2'>
-					<span class='content_words'>确保IT服务可用性的同时提高基础架构和维护的敏捷性</span>
+					<span class='content_words'>确保<span class='font_style'>IT</span>服务可用性的同时提高基础架构和维护的敏捷性</span>
 				</div>
 				<a href='pdf/UIM/解决方案介绍.pdf'>
 					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
@@ -43,7 +43,7 @@
 			<div class='download_list'>
 				<span class='title_list'>成功案例</span>
 				<div class='content_list_1'>
-					<span class='content_words'><span class='font_style'>digitalglobe</span></span>
+					<span class='content_words'><span class='font_style'>DigitalGlobe</span></span>
 				</div>
 				<a href='pdf/UIM/成功案例：digitalglobe.pdf'>
 					<span class='download_link'><img src='image/phone_index/play.png' class='view'>点此查看</span>
