--- a/phone_weixin.html
+++ b/phone_weixin.html
@@ -22,7 +22,7 @@
 					<div class='blank'></div>
 					<img src='image/weixin_code.png' class='weixin_code'>
 				<span class='weixin_code_tip'>
-					长按二维码，关注CA微信公众号，获取更多资讯。
+					长按二维码，关注<span class='font_style'>CA</span>微信公众号，获取更多资讯。
 				</span>
 
 		</div>
